--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "serve": "^11.2.0"
   },
   "main": "index.html",
-  "name": "swiper-navigation",
+  "name": "swiper-slides-per-view",
   "scripts": {
     "build": "echo This is a static template, there is no bundler or bundling involved!",
     "start": "serve"
